--- a/.env
+++ b/.env
@@ -1,13 +1,9 @@
 VITE_APP_NAME="EXUI"
 VITE_APP_VERSION="1.0.0"
 VITE_APP_LOGO="/img/logo.png"
-VITE_API_URL="/api"
-VITE_MOCK_ENABLE=true
-VITE_ROUTER_AUTOLOAD=true
-VITE_MENU_UNIQUE_OPENED=false
 
-#首页地址
-VITE_DASHBOARD_URL="/admin"
+#后台API地址
+VITE_API_URL="http://api.ipsoul.com/api"
 
-#icon配置
-VITE_ICON_SIZE=18
+#开启Mock
+VITE_MOCK_ENABLE=false
