--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,7 @@
-VITE_ROUTER_AUTOLOAD=true
-VITE_API_URL="https://www.fastmock.site/mock/83fbd201b41eec1469df638b452a033c/api"
+VITE_APP_NAME="EXUI"
+VITE_APP_VERSION="1.0.0"
+VITE_APP_LOGO="/img/logo.png"
+VITE_API_URL=""
+
+#开启Mock
+VITE_MOCK_ENABLE=false
