--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.0.6",
     "@icon-park/vue-next": "^1.3.6",
     "@types/sortablejs": "^1.13.0",
+    "@vueuse/core": "^9.1.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "dayjs": "^1.11.2",
