--- a/package.json
+++ b/package.json
@@ -8,40 +8,46 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.6",
-    "@icon-park/vue-next": "^1.3.6",
+    "@element-plus/icons-vue": "^2.0.9",
+    "@icon-park/vue-next": "^1.4.2",
+    "@types/prosemirror-commands": "^1.0.4",
+    "@types/prosemirror-model": "^1.16.2",
+    "@types/prosemirror-state": "^1.3.0",
+    "@types/prosemirror-view": "^1.23.3",
     "@types/sortablejs": "^1.13.0",
+    "@types/web-bluetooth": "^0.0.15",
+    "@types/ws": "^8.5.3",
     "@vueuse/core": "^9.1.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
-    "dayjs": "^1.11.2",
+    "dayjs": "^1.11.5",
     "echarts": "^5.3.3",
     "element-plus": "2.2.13",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.13",
+    "pinia": "^2.0.18",
     "sortablejs": "^1.15.0",
-    "vue": "^3.2.25",
-    "vue-router": "^4.0.14",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.25",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "autoprefixer": "^10.4.4",
+    "@types/node": "^17.0.45",
+    "@vitejs/plugin-vue": "^2.3.4",
+    "autoprefixer": "^10.4.8",
     "path": "^0.12.7",
-    "postcss": "^8.4.12",
-    "rollup-plugin-visualizer": "^5.6.0",
-    "sass": "^1.50.1",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.7.1",
-    "unplugin-vue-components": "^0.19.3",
-    "vite": "^2.9.5",
-    "vite-plugin-inspect": "^0.5.0",
+    "postcss": "^8.4.16",
+    "rollup-plugin-visualizer": "^5.7.1",
+    "sass": "^1.54.4",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.7.4",
+    "unplugin-auto-import": "^0.7.2",
+    "unplugin-vue-components": "^0.19.9",
+    "vite": "^2.9.15",
+    "vite-plugin-inspect": "^0.5.1",
     "vite-plugin-mock": "^2.9.6",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^0.34.17"
   }
 }
