--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "@/*": ["./src/*"],
       "#/*": ["./types/*"]
     },
-    "types": ["element-plus/global", "echarts", "lodash", "web-bluetooth", "naive-ui/volar"]
+    "types": ["element-plus/global", "echarts", "lodash", "web-bluetooth"]
   },
   "include": ["vite.config.ts", "src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue", "types/*.d.ts", "types/*.ts"],
   "exclude": ["node_modules", "dist"]
