--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,10 @@
 VITE_APP_NAME="EXUI"
 VITE_APP_VERSION="1.0.0"
 VITE_APP_LOGO="/img/logo.png"
-VITE_API_URL=""
+
+#后台API地址
+VITE_API_URL="http://api.ipsoul.com/api"
 
 #开启Mock
 VITE_MOCK_ENABLE=false
+
