--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
     "@icon-park/vue-next": "^1.4.2",
-    "@types/prosemirror-commands": "^1.0.4",
-    "@types/prosemirror-model": "^1.16.2",
-    "@types/prosemirror-state": "^1.3.0",
-    "@types/prosemirror-view": "^1.23.3",
     "@types/sortablejs": "^1.13.0",
     "@types/web-bluetooth": "^0.0.15",
-    "@types/ws": "^8.5.3",
     "@vueuse/core": "^9.1.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.5",
     "echarts": "^5.3.3",
     "element-plus": "2.2.13",
@@ -33,21 +29,28 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.19",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.45",
-    "@vitejs/plugin-vue": "^2.3.4",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue-jsx": "^2.0.0",
     "autoprefixer": "^10.4.8",
+    "core": "link:@types/@babel/core",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "path": "^0.12.7",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
     "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.54.4",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
-    "unplugin-auto-import": "^0.7.2",
-    "unplugin-vue-components": "^0.19.9",
-    "vite": "^2.9.15",
+    "unplugin-auto-import": "^0.9.5",
+    "unplugin-vue-components": "^0.21.2",
+    "vite": "^3.0.8",
     "vite-plugin-inspect": "^0.5.1",
     "vite-plugin-mock": "^2.9.6",
-    "vue-tsc": "^0.34.17"
+    "vue-tsc": "^0.38.9",
+    "webpack": "^5.74.0"
   }
 }
