--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_APP_VERSION="1.0.0"
 VITE_APP_LOGO="/img/logo.png"
 
 #后台API地址
-VITE_API_URL="http://api.ipsoul.com/api"
+VITE_API_URL="http://EXUI_API.test/api"
 
 #开启Mock
 VITE_MOCK_ENABLE=false
