--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
     "@icon-park/vue-next": "^1.4.2",
-    "@types/sortablejs": "^1.13.0",
-    "@types/web-bluetooth": "^0.0.15",
     "@vueuse/core": "^9.1.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.5",
     "echarts": "^5.3.3",
-    "element-plus": "2.2.13",
+    "element-plus": "^2.2.14",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
@@ -32,6 +30,8 @@
     "@types/babel__core": "^7.1.19",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.45",
+    "@types/sortablejs": "^1.13.0",
+    "@types/web-bluetooth": "^0.0.15",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.0",
     "autoprefixer": "^10.4.8",
